<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="onesong">1 song</string>
    <plurals name="Nsongs">
        <item quantity="other"><xliff:g id="count">%d</xliff:g> songs</item>
    </plurals>
    <plurals name="Nsongscomp">
        <item quantity="other"><xliff:g id="count_for_artist">%2$d</xliff:g> of <xliff:g id="total_count">%1$d</xliff:g> songs</item>
    </plurals>
    <plurals name="Nalbums">
        
        <item quantity="one">1 album</item>
        
        <item quantity="other"><xliff:g id="count">%d</xliff:g> albums</item>
    </plurals>
    <string translatable="false" name="durationformatshort"><xliff:g id="format">%2$d:%5$02d</xliff:g></string>
    <string translatable="false" name="durationformatlong"><xliff:g id="format">%1$d:%3$02d:%5$02d</xliff:g></string>
    <string translatable="false" name="durationformatverylong"><xliff:g id="format">%2$tF %1$02d:%3$02d </xliff:g></string>
    <string translatable="false" name="hourminuteformat"><xliff:g id="format">%1$02d:%3$02d </xliff:g></string>
    <string name="goto_start">Library</string>
    <string name="goto_playback">Playback</string>
    <string name="party_shuffle">Party shuffle</string>
    <string name="party_shuffle_off">Party shuffle off</string>
    <string name="delete_item">Delete</string>
    <string name="shuffle_all">Shuffle all</string>
    <string name="play_all">Play all</string>
    <string name="delete_artist_desc">All songs by <xliff:g id="artist">%s</xliff:g> will be permanently deleted from the SD card.</string>
    <string name="delete_album_desc">The entire album \"<xliff:g id="album">%s</xliff:g>\" will be permanently deleted from the SD card.</string>
    <string name="delete_song_desc">\"<xliff:g id="song">%s</xliff:g>\" will be permanently deleted from the SD card.</string>
    <string name="delete_confirm_button_text">OK</string>
    <plurals name="NNNtracksdeleted">
        
        <item quantity="one">1 song was deleted.</item>
        
        <item quantity="other"><xliff:g id="songs_to_delete">%d</xliff:g> songs were deleted.</item>
    </plurals>
    <string name="scanning">Scanning SD card\u2026</string>
    <string name="nowplaying_title">Now playing</string>
    <string name="partyshuffle_title">Party shuffle</string>
    <string name="artists_title">Artists</string>
    <string name="albums_menu">Albums</string>
    <string name="albums_title">Albums</string>
    <string name="tracks_menu">Songs</string>
    <string name="tracks_title">Songs</string>
    <string name="playlists_menu">Playlists</string>
    <string name="playlists_title">Playlists</string>
    <string name="videos_title">Videos</string>
    <string name="all_title">All media</string>
    <string name="browse_menu">Artists</string>
    <string name="search_title">Search</string>
    <string name="no_tracks_title">No songs</string>
    <string name="no_videos_title">No videos</string>
    <string name="no_playlists_title">No playlists</string>
    <string name="delete_playlist_menu">Delete</string>
    <string name="edit_playlist_menu">Edit</string>
    <string name="rename_playlist_menu">Rename</string>
    <string name="export_ab_sound">Export AB as Sound</string>
    <string name="ab_settings">AB Preferences</string>
    <string name="playlist_deleted_message">Playlist deleted.</string>
    <string name="playlist_renamed_message">Playlist renamed.</string>
    <string name="recentlyadded">Recently added</string>
    <string name="recentlyadded_title">Recently added</string>
    <string name="podcasts_listitem">Podcasts</string>
    <string name="podcasts_title">Podcasts</string>
    <string name="sdcard_missing_title">No SD card</string>
    <string name="sdcard_missing_message">Your phone does not have an SD card inserted.</string>
    <string name="sdcard_busy_title">SD card unavailable</string>
    <string name="sdcard_busy_message">Sorry, your SD card is busy.</string>
    <string name="sdcard_error_title">SD card error</string>
    <string name="sdcard_error_message">An error was encountered on your SD card.</string>
    <string name="unknown_artist_name">Unknown artist</string>
    <string name="unknown_album_name">Unknown album</string>
    <string name="shuffle_on_notif">Shuffle is on.</string>
    <string name="shuffle_off_notif">Shuffle is off.</string>
    <string name="repeat_off_notif">Repeat is off.</string>
    <string name="repeat_current_notif">Repeating current song.</string>
    <string name="repeat_all_notif">Repeating all songs.</string>
    <string name="ringtone_menu">Use as phone ringtone</string>
    <string name="ringtone_menu_short">Use as ringtone</string>
    <string name="ringtone_set">\"<xliff:g id="name" example="Alarm Bell">%s</xliff:g>\" set as phone ringtone.</string>
    <string name="play_selection">Play</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="queue">Current playlist</string>
    <string name="new_playlist">New</string>
    <string name="new_playlist_name_template">New playlist <xliff:g id="number">%d</xliff:g></string>
    <plurals name="NNNtrackstoplaylist">
        
        <item quantity="one">1 song added to playlist.</item>
        
        <item quantity="other"><xliff:g id="number" example="27">%d</xliff:g> songs added to playlist.</item>
    </plurals>
    <string name="emptyplaylist">Selected playlist is empty.</string>
    <string name="startendtooclose">AB points are too close.</string>
    <string name="create_playlist_create_text">Save</string>
    <string name="create_playlist_overwrite_text">Overwrite</string>
    <string name="service_start_error_title">Playback problem</string>
    <string name="service_start_error_msg">Sorry, the song could not be played.</string>
    <string name="service_start_error_button">OK</string>
    <string-array name="weeklist">
        <item>"1 week"</item>
        <item>"2 weeks"</item>
        <item>"3 weeks"</item>
        <item>"4 weeks"</item>
        <item>"5 weeks"</item>
        <item>"6 weeks"</item>
        <item>"7 weeks"</item>
        <item>"8 weeks"</item>
        <item>"9 weeks"</item>
        <item>"10 weeks"</item>
        <item>"11 weeks"</item>
        <item>"12 weeks"</item>
    </string-array>
    <string name="weekpicker_set">Done</string>
    <string name="weekpicker_title">Set time</string>
    <string name="save_as_playlist">Save as playlist</string>
    <string name="clear_playlist">Clear playlist</string>
    <string name="musicbrowserlabel">AB Audio Repeat Player</string>
    <string name="musicshortcutlabel">AB Repeat Player playlist</string>
    <string name="mediaplaybacklabel">AB Audio Repeat Player</string>
    <string name="videobrowserlabel">AB Video Repeat Player</string>
    <string name="mediapickerlabel">AB Audio Repeat Player</string>
    <string name="playback_failed">Sorry, the player does not support this type of audio file.</string>
    <string name="cancel">Cancel</string>
    <string name="quit">Close</string>
    <string name="running">Running</string>
    <string name="hidden">Hidden</string>
    <string name="click_to_restore">Click to Restore</string>
    <string name="remove_from_playlist">Remove from playlist</string>
    <string name="streamloadingtext">Connecting to <xliff:g id="host">%s</xliff:g></string>
    <string name="mediasearch">Search for <xliff:g id="term" example="Beethoven">%s</xliff:g> using:</string>
    <string name="abpos_order">Display Order</string>
    <string name="abpos_order_creation_normal">by Creation Normal</string>
    <string name="abpos_order_creation_reverse">by Creation Reverse</string>
    <string name="abpos_order_apos_normal">by A Point Normal</string>
    <string name="abpos_order_apos_reverse">by A Point Reverse</string>
    <string name="abpos_order_name_normal">by Name Normal</string>
    <string name="abpos_order_name_reverse">by Name Reverse</string>
    <string name="ab_prefs_title">AB Repeat Preferences</string>
    <string name="ab_prefs_summary">AB Repeat behavior options</string>
    <string name="mode_switch_wclick_main_title">Mode SW Double Click</string>
    <string name="mode_switch_wclick_main_summary">Enable in Main Controls</string>
    <string name="mode_switch_wclick_bt_title">Mode SW Double Click</string>
    <string name="mode_switch_wclick_bt_summary">Enable in Blutooh Operations</string>
    <string name="ask_if_duplicated_title">Ask AB Duplication</string>
    <string name="ask_if_duplicated_summary">If the same AB already recorded, ask if you want to proceed.</string>
    <string name="ask_if_overwrite_title">Ask Overwrite</string>
    <string name="ask_if_overwrite_summary">If recorded AB was modified and to be recorded, ask if you want to overwrite or just add.</string>
    <string name="prev_behaviour_old_title">Old Prev Button Behaviour</string>
    <string name="prev_behaviour_old_summary">Double-click on Prev Button starts playing the prev music track.</string>
    <string name="video_navbar_autohide_title">Navigation Bar Auto-Hide in Video</string>
    <string name="video_navbar_autohide_summary">Navigation Bar automatically hidden when enabled. Always shown when disabled.</string>
    <string name="video_scrn_orientation_title">Video Screen Orientation</string>
    <string name="video_scrn_orientation_summary">Auto, Landscape or Portrait</string>
    <string name="new_features">AB Repeat 3.7.6 Changes</string>
    <string name="new_features_01">1. IMPORTANT: System Navigation Bar automatically hidden.(Video)</string>
    <string name="new_features_02">You can change this behavior from Menu in Video Track List Browser.</string>
    <string name="new_features_03">2. Music Playing don\&apos;t stop in background, when it started from File Manager.(Audio)</string>
    <string name="new_features_04">Many People requested this, but let us know if you don\&apos;t like it.</string>
    <string name="new_features_05">3. Other minor bug fixes.</string>
    <string name="new_features_donation">* Donation or encouraging comments or rating would be appreciated.　Very many thanks to the people who have donated already!</string>
    <string name="new_features_button_01">AB Repeat Preferences</string>
    <string name="new_features_button_02">Playing AB&amp;BM list Guide</string>
    <string name="new_features_button_03">Bluetooth User Guide</string>
    <string name="new_features_button_04">Introduction Video</string>
    <string name="new_features_button_05">Introduction Video</string>
    <string name="welcome">Welcome to AB Repeat Player</string>
    <string name="welcome_01">Detailed User Guide is always available inside this app.\nClick MENU button in the playback screen and select \&quot;Help\&quot;, or click the button below.\nUser Guide is also available on the web.</string>
    <string name="welcome_button_01">AB Repeat Player Guide</string>
    <string name="welcome_button_02">Introduction YouTube Video</string>
    <string name="donation_title">DONATION</string>
    <string name="comment_title">COMMENT and RATING</string>
    <string name="ab_help_list_traverse_sub">Playing AB&amp;BM list</string>
    <string name="bluetooth_help_alert_01">AB&amp;BM Mode set snd</string>
    <string name="bluetooth_help_alert_02">NORMAL Mode set snd</string>
    <string name="list_traverse_help_01">Using Prev, Pause/Play, Next buttons, you can traverse inside the AB&amp;BM list and play.(Audio only)</string>
    <string name="feedback_please">Please submit questions or requests at\n http://learnerstechlab.com/support/ (in maintenance) \nPlease avoid Android Play Review page for supports and requests. It\&apos;s very hard to support without bi-directional communications.</string>
    <string name="user_guide_here">User Guide and more info at\n http://learnerstechlab.com/ab_guide/ (in maintenance)</string>
</resources>