<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="ab_preferences_main"
    android:summary="@string/ab_prefs_title"
    android:title="@string/ab_prefs_summary" >

    <CheckBoxPreference
        android:key="mode_switch_wclick_main"
        android:summary="@string/mode_switch_wclick_main_summary"
        android:title="@string/mode_switch_wclick_main_title"
        android:defaultValue="false" />
    
    <CheckBoxPreference
        android:key="mode_switch_wclick_bt"
        android:summary="@string/mode_switch_wclick_bt_summary"
        android:title="@string/mode_switch_wclick_bt_title"
        android:defaultValue="true" />
    
    <CheckBoxPreference
        android:key="ask_if_duplicated"
        android:summary="@string/ask_if_duplicated_summary"
        android:title="@string/ask_if_duplicated_title"
        android:defaultValue="true" />
    
    <CheckBoxPreference
        android:key="ask_if_overwrite"
        android:summary="@string/ask_if_overwrite_summary"
        android:title="@string/ask_if_overwrite_title"
        android:defaultValue="true" />
    
    <CheckBoxPreference
        android:key="prev_behaviour_old"
        android:summary="@string/prev_behaviour_old_summary"
        android:title="@string/prev_behaviour_old_title"
        android:defaultValue="false" />

</PreferenceScreen>
