<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="ab_preferences_main"
    android:summary="@string/ab_prefs_title"
    android:title="@string/ab_prefs_summary" >

    <CheckBoxPreference
        android:key="video_navbar_autohide"
        android:summary="@string/video_navbar_autohide_summary"
        android:title="@string/video_navbar_autohide_title"
        android:defaultValue="true" />

    <ListPreference
        android:key="video_scrn_lock_auto"
        android:summary="@string/video_scrn_orientation_summary"
        android:title="@string/video_scrn_orientation_title"
        android:entries="@array/video_orientation_entries"
        android:entryValues="@array/video_orientation_values"
        android:defaultValue="1"/>

</PreferenceScreen>
