<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:fillViewport="true">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="top"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dip"
        android:text="@string/welcome"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_gravity="top"
        android:visibility="visible" />
   
   <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:padding="8dip"
	        android:text="@string/welcome_01"
	        android:gravity="top"
	        android:textAppearance="?android:attr/textAppearanceSmall"
	        android:visibility="visible" />

   <Button
       android:id="@+id/button1"
       style="?android:attr/buttonStyleSmall"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:onClick="buttonMethod01"
       android:visibility="visible"
       android:text="@string/welcome_button_01" />
   
   <Button
       android:id="@+id/button2"
       style="?android:attr/buttonStyleSmall"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:onClick="buttonMethod02"
       android:visibility="visible"
       android:text="@string/welcome_button_02" />
 
    
    
    <TextView
        android:id="@+id/donation"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:padding="8dip"
	        android:text="@string/new_features_donation"
	        android:gravity="top"
	        android:textAppearance="?android:attr/textAppearanceSmall"
	        android:visibility="visible" />
    
    <LinearLayout
        android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:gravity="top"
	    android:orientation="horizontal">

    <Button
        android:id="@+id/donationbutton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickDonationButton"
        android:text="@string/donation_title" />

    <Button
        android:id="@+id/commentbutton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickCommentButton"
        android:text="@string/comment_title" />
    
    </LinearLayout>
   
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dip"
        android:text="@string/feedback_please"
        android:autoLink="all"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_gravity="top"
        android:visibility="visible" />
        
       
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dip"
        android:text="@string/user_guide_here"
        android:autoLink="all"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_gravity="top"
        android:visibility="visible" />
       


      <Button
          android:id="@+id/ok_button"
          style="?android:attr/buttonStyleSmall"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dip"
          android:text="@android:string/ok" 
          android:onClick="buttonOk"/>

</LinearLayout>
</ScrollView>