<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="top"
    android:orientation="vertical" >
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dip"
        android:text="@string/abpos_order"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_gravity="top"
        android:visibility="visible" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:paddingBottom="15dip">

        <RadioButton
            android:id="@+id/radio0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="CreateNormalClicked"
            android:text="@string/abpos_order_creation_normal" />

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="CreateReverseClicked"
            android:text="@string/abpos_order_creation_reverse" />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="APosNormalClicked"
            android:text="@string/abpos_order_apos_normal" />
        
        <RadioButton
            android:id="@+id/radio3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="APosReverseClicked"
            android:text="@string/abpos_order_apos_reverse" />
        
        <RadioButton
            android:id="@+id/radio4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="NameNormalClicked"
            android:text="@string/abpos_order_name_normal" />
        
        <RadioButton
            android:id="@+id/radio5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="NameReverseClicked"
            android:text="@string/abpos_order_name_reverse" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/ok"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:onClick="OkClicked"
            android:text="@android:string/ok" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:onClick="CancelClicked"
            android:text="@android:string/cancel" />

    </LinearLayout>

</LinearLayout>
